fix overflow on mobile

--- a/src/res/style.css
+++ b/src/res/style.css
@@ -80,6 +80,9 @@ body {
 .header a:hover {
   text-decoration: underline;
 }
+#dropdown a:hover {
+  background-color: var(--bg);
+}
 
 .site-banner a,
 .site-banner a:hover {
@@ -92,15 +95,18 @@ button {
   padding: 0;
   background-color: inherit;
   border: none;
-  height: 15px;
-  margin: 5px;
+  height: 1.5em;
+  width: 1.5em;
+  display: flex;
+  margin-left: 1em;
+  /* margin: 5px; */
 }
 
 object {
   pointer-events: none;
 }
 
-#dropdown ul {
+ul {
   margin: 0;
   padding: 0;
   margin-left: 1em;
@@ -159,14 +165,38 @@ a:hover {
   color: var(--bg);
 }
 
-ul {
-  padding-left: 1em;
-}
-
 #postamble {
   background-color: var(--bg-accent);
+  margin-top: 1em;
 }
 
 #site_icon_container {
   display: flex;
+}
+
+li:not(:last-child) { 
+   margin-bottom: 0.25em;  
+}
+
+pre {
+  background-color: var(--bg-accent);
+  border: 1px solid var(--fg-accent);
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 0.75em;
+  padding: 0.25em;
+  overflow-x: scroll;
+}
+
+.figure {
+  text-align: center;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+
+.figure img {
+  background-color: white;
+}
+
+.content p {
+  overflow-x: scroll;
 }
